--- a/src/app/users/components/favorite-author-card/favorite-author-card.component.html
+++ b/src/app/users/components/favorite-author-card/favorite-author-card.component.html
@@ -22,8 +22,8 @@
   
 
 
-   <div class="p-2 w-56 flex flex-col place-content-center bg-red-900">
-            <div class="bg-yellow-400 flex place-content-center">
+   <div class="p-2 w-56 flex flex-col place-content-center ">
+            <div class=" flex place-content-center">
                 <img [src]='author!.photoUrl' alt='author.name' class="w-40 h-40 rounded-full"/>
             </div>
             <h6 class="m-2">{{author.name}}</h6>
