--- a/src/app/authors/components/author-card/author-card.component.html
+++ b/src/app/authors/components/author-card/author-card.component.html
@@ -10,15 +10,15 @@
 </div> -->
 
 
-<div class="max-w-sm rounded overflow-hidden shadow-lg h-96">
+<div class="max-w-sm overflow-hidden shadow-lg h-96 rounded-lg">
     <img class="w-full h-48" [src]="author!.photoUrl" alt="author">
-    <div class="px-6 py-4  h-40" >
-      <div class="font-bold text-lg mb-2 h-10">{{author!.name}}</div>
-      <p class="text-gray-700 text-sm h-30">
+    <div class="px-6 py-4  h-40 bg-slate-300" >
+      <div class="font-bold text-lg mb-2">{{author!.name}}</div>
+      <p class="text-gray-700 text-sm h-30" >
        {{author!.biography | trim : 100}}
       </p>
     </div>
-    <div class="px-6 pt-4 pb-2">
+    <div class="px-6 pt-4 pb-2 bg-slate-300">
       
     </div>
   </div>
