--- a/src/app/users/components/profile-card/profile-card.component.html
+++ b/src/app/users/components/profile-card/profile-card.component.html
@@ -3,9 +3,12 @@
     <!-- img div -->
     <div class="  p-2 flex  place-content-center">
            <div class=" shadow-2xl rounded-full shadow-slate-400 ">
-                  <img   class="w-56 h-56 relative rounded-full"
+                  <!-- <img   class="w-56 h-56 relative rounded-full"
                      [src]="user.profilepic?user.profilepic:
                      'https://w7.pngwing.com/pngs/340/946/png-transparent-avatar-user-computer-icons-software-developer-avatar-child-face-heroes-thumbnail.png'" 
+                     /> -->
+                     <img   class="w-56 h-56 relative rounded-full"
+                     src={{user.profilePic}}
                      />
            </div>
     </div>
